[metadata]
name = afcn
version = attr: afcn.__version__
description = afcn : tools for gene expression inference
long_description = file: README.md
license = Apache 2.0
author = Genomic Data Modeling Lab


[options]
packages = find:
package_dir =
    = src
python_requires = >= 3.8
install_requires = 
    numpy >= 1.14.0
    pysam >= 0.21.0

[options.packages.find]
where = src
