[metadata]
name = afcn
version = attr: afcn.__version__
description = afcn : tools for gene expression inference
long_description = file: README.md
license = Apache 2.0
author = Genomic Data Modeling Lab

[options]
python_requires = >= 3.9
install_requires = 
    numpy >= 1.14.0
    scipy
    pysam >= 0.21.0
include_package_data = True


# [options.package_data]
# afcn =
#     *.md
